-feature#4957: Add Device Template Classes to match the Classes in Upcoming release of the Package Plugin
-feature#4989: Cache Cacti 'Total Rows' by Hash to Improve Performance
-feature#5009: Adding a new method for use in xml files: value_parse_index
-feature: Upgrade billboard.js to version 3.6
-feature: Upgrade jQuery to version 3.6.1
-feature: Upgrade jQueryUI to version 1.13.2

1.2.22
-security#4834: When creating new graphs, cross site injection is possible
-issue#4768: When creating user from template, multiple Domain FullName and Mail are not propagated
-issue#4791: Nectar Aggregate 95th emailed report broken
-issue#4796: Boost may not find archive tables correctly
-issue#4802: Users may be unable to change their password when forced during a login
-issue#4803: Net-SNMP Memory Graph Template has Wrong GPRINT
-issue#4806: Search in tree view unusable on larger installations
-issue#4808: Increased bulk insert size to avoid partial inserts and potential data loss.
-issue#4810: Call to undefined function boost_debug in Cacti log
-issue#4814: When no guest template is set, login cookies are not properly set
-issue#4817: Later RRDtool releases do not need to check last_update time
-issue#4818: Regex filters are not always long enough
-issue#4819: Domains based LDAP and AD Fullname and Email not auto-populated
-issue#4822: Cacti polling and boost report the wrong number of Data Sources when Devices are disabled
-issue#4823: When editing Graph Template Items there are cases where VDEF's are hidden when they should be shown
-issue#4831: Database SSL setting lacks default value
-issue#4837: Update default path cacti under *BSD by xmacan
-issue#4840: Web Basic authentication not creating template user
-issue#4846: Unable to change the Heartbeat of a Data Source Profile
-issue#4849: Tree Search Does Not Properly Search All Trees
-issue#4850: When structured paths are setup, RRDfiles may not always be created when possible